--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@iconify/react": "^4.1.1",
+    "@pqina/pintura": "^8.72.5",
+    "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.5",
+    "debounce": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
-    "react-toastify": "^10.0.3"
+    "react-toastify": "^10.0.3",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
