--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@pqina/pintura": "^8.72.5",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "debounce": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.3",
