--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.3",
+    "socket.io-client": "^4.7.4",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
