--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.3",
